# hamsci_psws

./: .gitignore  .readthedocs.yaml  CITATION.cff  Grape V1 Plots MWE-Copy6.ipynb  Grape V1 Plots.ipynb  README.md  filelist.txt  grapefunctions.py  mypy.ini  nodelist.csv  pyproject.toml  requirements.txt  reshaping-and-regularizing.ipynb  sami3.txt  setup.py  todo.md
.ipynb_checkpoints/: Grape V1 Plots-checkpoint.ipynb
docs/: .gitignore  Makefile  conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/autosummary/: custom-module-template.rst
hamsci_grape1/: __init__.py  gen_lib.py  grape1.py  solar.py
hamsci_psws/: __init__.py  calcSun.py  gen_lib.py  geopack.py  goes.py  grape1.py  locator.py  solar.py
scripts/: Grape V1 Multiple Station Time Series.ipynb  Grape V1 Plots MWE-Copy6.ipynb  Grape V1 Power Spectral Density Plot.ipynb  filelist.txt  map.ipynb  multiPlot.py  timeDateParameter.py
