[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamsci_psws"
authors = [
  { name="Nathaniel A. Frissell", email="nathaniel.frissell@scranton.edu"},
  { name="Kristina V. Collins"}
]
description = "HamSCI Grape v1 Personal Space Weather Station Plotting Tools"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pandas",
    "plotly",
    "python_dateutil",
    "pytz",
    "requests",
    "scipy",
    "suntime",
    "tqdm",
    "xarray"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/HamSCI/hamsci_psws"
"Bug Tracker" = "https://github.com/HamSCI/hamsci_psws/issues"
"HamSCI Website" = "https://hamsci.org"

[tool.setuptools]
packages = ["hamsci_psws"]

[tools.setuptools.dynamic]
version = {attr = "hamsci_psws.__version__"}
